--- a/style.css
+++ b/style.css
@@ -77,10 +77,10 @@ nav {
     overflow: hidden;
 }
 .container {
-    overflow: hidden;
     background-image: url(images/bg.png);
-    width: 100%;
-    height: 950px;
+    background-size: cover;
+    height: 100vh;
+    background-position: 50% 50%;
 }
 .content {
     display: flex;
