--- a/style.css
+++ b/style.css
@@ -8,7 +8,14 @@
 }
 @font-face {
     font-family: 'FontAwesome';
-    src: url('all.min.css');     
+    src: url('webfonts/fa-brands-400.ttf');    
+    src: url('webfonts/fa-brands-400.woff2');    
+    src: url('webfonts/fa-regular-400.ttf');    
+    src: url('webfonts/fa-regular-400.woff2');    
+    src: url('webfonts/fa-solid-900.ttf');    
+    src: url('webfonts/fa-solid-900.woff2');    
+    src: url('webfonts/fa-v4compatibility.ttf');    
+    src: url('webfonts/fa-v4compatibility.woff2');    
     font-weight: normal;    
     font-style: normal;
   }
