--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     font-family: 'poppins-bold';
     src: url(fonts/Poppins/Poppins-Bold.ttf);
 }
-@font-face {
+/* @font-face {
     font-family: 'FontAwesome';
     src: url('webfonts/fa-brands-400.ttf');    
     src: url('webfonts/fa-brands-400.woff2');    
@@ -18,7 +18,7 @@
     src: url('webfonts/fa-v4compatibility.woff2');    
     font-weight: normal;    
     font-style: normal;
-  }
+  } */
 * {
     margin: 0;
     padding: 0;
