--- a/style.css
+++ b/style.css
@@ -59,6 +59,26 @@ nav {
     margin-left: 20px;
     margin-right: 20px;
 }
+.cartCounter {
+    position: relative;
+    text-align: center;
+    height: 18px;
+}
+.counter {
+    position: absolute;
+    top: 11px;
+    left: 35px;
+    background-color: rgb(206, 55, 0);
+    font-size: 10px;
+    color: white;
+    padding: 10px;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .icons img:hover {
     cursor: pointer;
     transform: translateY(-4px);
@@ -213,7 +233,7 @@ nav {
     overflow: hidden;
     color: rgb(206, 55, 0);
   }
-.star40 {
+.star40 {                 /*in use*/
     display: inline-block;
     position: relative;
     font-size: 14px;
@@ -247,7 +267,7 @@ nav {
     overflow: hidden;
     color: rgb(206, 55, 0);
   }
-.star60 {
+.star60 {                 /*in use */
     display: inline-block;
     position: relative;
     font-size: 14px;
@@ -316,6 +336,89 @@ nav {
     color: rgb(206, 55, 0);
   }
 
+  .cart-drop-down {
+    position: absolute;
+    top: 0%;
+    left: 100%;
+    width: 0%;
+    background-color: white;
+    opacity: 100%;
+    height: 100%;
+    padding: 0px;
+    z-index: 1;
+}
+.margin {
+    margin: 30px 0px 0px 20px;
+}
+.cart-drop-down-child {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    margin-top: 20px;
+}
+/* .drop-down a {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    padding: 20px;
+    text-wrap: nowrap;
+} */
+.activ {
+    position: fixed;
+    top: 0%;
+    left: 70%;
+    opacity: 100%;
+    width: 30%;
+    box-shadow: 0px 0px 5px 0px black;
+    transition: 0.5s;
+}
+.disable {
+    position: absolute;
+    top: 0%;
+    left: 100%;
+    width: 0%;
+    background-color: white;
+    opacity: 100%;
+    height: 100%;
+    padding: 0px;
+    z-index: 1;
+    transition: 0.5s;
+}
+.close-cart:hover {
+    cursor: pointer;
+    transform:scale(1.1);
+    transition: 0.5s;
+}
+.close-cart:not(:hover) {
+    transform:scale(1);
+    transition: 0.5s;
+}
+.cart-drop-down-child h1 {
+    color: rgb(206, 55, 0);
+    margin: auto;
+    text-wrap: nowrap;
+}
+.prod {
+    display: flex;
+    flex-direction: column;
+}
+.atc {
+    outline: none;
+    border-style: none;
+    background-color: black;
+    color: white;
+    padding: 10px;
+    border-radius: 60px;
+    cursor: pointer;
+    font-size: 12px;
+    width: 80%;
+    align-self: center;
+    margin: 10px;
+}
+.atc:hover {
+    transform: scale(1.05);
+    background-color: rgb(206, 55, 0);
+}
 
 @media (max-width: 1024px) {
     nav {
