--- a/style.css
+++ b/style.css
@@ -79,6 +79,9 @@ nav {
     justify-content: center;
     align-items: center;
 }
+.hide-counter {
+    display: none;
+}
 .icons img:hover {
     cursor: pointer;
     transform: translateY(-4px);
@@ -173,10 +176,13 @@ nav {
 }
 .container-3 {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    column-gap: 1%;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 10px;
     justify-items: center;
     margin: 0% 15% 0% 15%;
+}
+.container-3 img {
+    width: 100%;
 }
 .container-3 > div {
     margin-top: 100px;
@@ -256,7 +262,6 @@ nav {
     font-size: 14px;
     color: #ddd;
   }
-  
   .star50:after {
     font-family: FontAwesome;
     content: "\f005";
@@ -273,7 +278,6 @@ nav {
     font-size: 14px;
     color: #ddd;
   }
-  
   .star60:after {
     font-family: FontAwesome;
     content: "\f005";
@@ -290,7 +294,6 @@ nav {
     font-size: 14px;
     color: #ddd;
   }
-  
   .star70:after {
     font-family: FontAwesome;
     content: "\f005";
@@ -307,7 +310,6 @@ nav {
     font-size: 14px;
     color: #ddd;
   }
-  
   .star80:after {
     font-family: FontAwesome;
     content: "\f005";
@@ -324,7 +326,6 @@ nav {
     font-size: 14px;
     color: #ddd;
   }
-  
   .star90:after {
     font-family: FontAwesome;
     content: "\f005";
@@ -335,9 +336,8 @@ nav {
     overflow: hidden;
     color: rgb(206, 55, 0);
   }
-
   .cart-drop-down {
-    position: absolute;
+    position: relative;
     top: 0%;
     left: 100%;
     width: 0%;
@@ -346,14 +346,15 @@ nav {
     height: 100%;
     padding: 0px;
     z-index: 1;
-}
-.margin {
-    margin: 30px 0px 0px 20px;
+    /* display: flex;
+    flex-direction: column; */
+    /* justify-content: space-between; */
+    overflow-y: visible;
 }
 .cart-drop-down-child {
     display: flex;
     flex-direction: column;
-    text-align: right;
+    text-align: center;
     margin-top: 20px;
 }
 /* .drop-down a {
@@ -384,6 +385,9 @@ nav {
     z-index: 1;
     transition: 0.5s;
 }
+.margin {
+    margin: 20px 0px 20px 10px;
+}
 .close-cart:hover {
     cursor: pointer;
     transform:scale(1.1);
@@ -393,6 +397,42 @@ nav {
     transform:scale(1);
     transition: 0.5s;
 }
+.cart-head {
+    text-align: center;
+    text-wrap: nowrap;
+}
+.buttons {
+    display: flex;
+    position: sticky;
+    top: 820px;
+    left: 0px;
+    width: 100%;
+}
+.btn1,
+.btn2 {
+    width: 50%;
+    height: 100px;
+    border-style: none;
+    color: white;
+    cursor: pointer;
+    text-wrap: nowrap;
+}
+.btn1 {
+    background-color: black;
+}
+.btn1:hover {
+    background-color: rgb(20, 20, 20);
+}
+.btn2 {
+    background-color: rgb(206, 55, 0);
+}
+.btn2:hover {
+    background-color: rgb(211, 68, 15);
+}
+/* .cart-drop-down {
+    display: flex;
+    flex-direction: column;
+} */
 .cart-drop-down-child h1 {
     color: rgb(206, 55, 0);
     margin: auto;
@@ -419,8 +459,39 @@ nav {
     transform: scale(1.05);
     background-color: rgb(206, 55, 0);
 }
-
+@media (max-width: 1280px) {
+    .activ {
+        left: 50%;
+        width: 50%;
+    }
+    .container-3 {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 10px;
+        justify-items: center;
+        margin: 0% 15% 0% 15%;
+    }
+    .container-3 img {
+        width: 100%;
+    }
+    .container-3 > div {
+        margin-top: 100px;
+    }
+}
 @media (max-width: 1024px) {
+    .container-3 {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 10px;
+        justify-items: center;
+        margin: 0% 15% 0% 15%;
+    }
+    .container-3 img {
+        width: 100%;
+    }
+    .container-3 > div {
+        margin-top: 100px;
+    }
     nav {
         width: 100%;
     }
@@ -440,10 +511,6 @@ nav {
         height: 100%;
         padding: 0px;
         z-index: 1;
-    }
-    .margin {
-        margin-top: 20px;
-        margin-left: 20px;
     }
     .drop-down-child {
         display: flex;
@@ -502,6 +569,19 @@ nav {
 }
 
 @media (max-width: 768px) {
+    .container-3 {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 10px;
+        justify-items: center;
+        margin: 0% 15% 0% 15%;
+    }
+    .container-3 img {
+        width: 100%;
+    }
+    .container-3 > div {
+        margin-top: 100px;
+    }
     nav {
         width: 100%;
     }
@@ -522,10 +602,6 @@ nav {
         padding: 0px;
         z-index: 1;
     }
-    .margin {
-        margin-top: 20px;
-        margin-left: 20px;
-    }
     .drop-down-child {
         display: flex;
         flex-direction: column;
@@ -542,9 +618,9 @@ nav {
     .activ {
         position: fixed;
         top: 0%;
-        left: 50%;
+        left: 0%;
         opacity: 100%;
-        width: 50%;
+        width: 100%;
         box-shadow: 0px 0px 5px 0px black;
         transition: 0.5s;
     }
@@ -583,6 +659,19 @@ nav {
 }
 
 @media (max-width: 480px) {
+    .container-3 {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        column-gap: 10px;
+        justify-items: center;
+        margin: 0% 15% 0% 15%;
+    }
+    .container-3 img {
+        width: 100%;
+    }
+    .container-3 > div {
+        margin-top: 100px;
+    }
     nav {
         width: 100%;
         padding: 10px 15% 10px 15%;
@@ -613,10 +702,6 @@ nav {
         padding: 0px;
         z-index: 1;
     }
-    .margin {
-        margin-top: 20px;
-        margin-left: 20px;
-    }
     .drop-down-child {
         display: flex;
         flex-direction: column;
@@ -633,9 +718,9 @@ nav {
     .activ {
         position: fixed;
         top: 0%;
-        left: 50%;
+        left: 0%;
         opacity: 100%;
-        width: 50%;
+        width: 100%;
         box-shadow: 0px 0px 5px 0px black;
         transition: 0.5s;
     }
@@ -685,13 +770,6 @@ nav {
     .container-2 {
         padding: 0% 25% 0% 15%;
     }
-    .container-3 {
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
-    .container-3 img {
-        width: 200px;
-        height: 200px;
-    }
     .content {
         padding: 150px 0 0 15%;
     }
@@ -735,10 +813,6 @@ nav {
         opacity: 100%;
         height: 100%;
         padding: 0px;
-    }
-    .margin {
-        margin-top: 20px;
-        margin-left: 20px;
     }
     .drop-down-child {
         display: flex;
@@ -795,13 +869,6 @@ nav {
         font-weight: bold;
         color: rgb(206, 55, 0);
         line-height: 90%;
-    }
-    .container-3 {
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
-    .container-3 img {
-        width: 200px;
-        height: 200px;
     }
     .content {
         padding: 150px 0 0 15%;
