--- a/style.css
+++ b/style.css
@@ -459,6 +459,10 @@ nav {
     transform: scale(1.05);
     background-color: rgb(206, 55, 0);
 }
+.pricencode {
+    display: flex;
+    flex-direction: column;
+}
 @media (max-width: 1280px) {
     .activ {
         left: 50%;
