--- a/style.css
+++ b/style.css
@@ -346,9 +346,6 @@ nav {
     height: 100%;
     padding: 0px;
     z-index: 1;
-    /* display: flex;
-    flex-direction: column; */
-    /* justify-content: space-between; */
     overflow-y: visible;
 }
 .cart-drop-down-child {
@@ -357,13 +354,6 @@ nav {
     text-align: center;
     margin-top: 20px;
 }
-/* .drop-down a {
-    text-decoration: none;
-    color: black;
-    font-size: 18px;
-    padding: 20px;
-    text-wrap: nowrap;
-} */
 .activ {
     position: fixed;
     top: 0%;
@@ -374,7 +364,7 @@ nav {
     transition: 0.5s;
 }
 .disable {
-    position: absolute;
+    position: fixed;
     top: 0%;
     left: 100%;
     width: 0%;
@@ -429,9 +419,6 @@ nav {
 .btn2:hover {
     background-color: rgb(211, 68, 15);
 }
-/* .cart-drop-down {
-
-} */
 .cart-drop-down-child h1 {
     color: rgb(206, 55, 0);
     margin: auto;
@@ -644,7 +631,7 @@ nav {
         transition: 0.5s;
     }
     .disable {
-        position: absolute;
+        position: fixed;
         top: 0%;
         left: 100%;
         width: 0%;
@@ -679,8 +666,6 @@ nav {
 
 @media (max-width: 480px) {
     .container-3 {
-        /* display: grid; */
-        /* grid-template-columns: repeat(1, 1fr); */
         column-gap: 10px;
         justify-items: center;
         margin: 0% 10% 0% 10%;
@@ -744,7 +729,7 @@ nav {
         transition: 0.5s;
     }
     .disable {
-        position: absolute;
+        position: fixed;
         top: 0%;
         left: 100%;
         width: 0%;
